<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">Digital Recipes</string>
    <string name="boton_nueva_receta">New recipe button</string>
    <string name="semiesfera_decorativa">decorative_hemisphere</string>
    <string name="titulo_receta">Recipe title</string>
    <string name="breve_descripcion">Short description of the recipe</string>
    <string name="modificar">Modify</string>
    <string name="eliminar">Delete</string>
    <string name="ver">Show recipe</string>
    <string name="title_activity_ver_receta" translatable="false">VerRecetaActivity</string>
    <string name="portada">Cover</string>
    <string name="ingredientes">Ingredients</string>
    <string name="pasos">Steps</string>
    <string name="descripcion">DESCRIPTION</string>
    <string name="tiempo_de_elaboracion">PREPARATION TIME</string>
    <string name="receta_tortilla">Classic Spanish recipe made with potatoes and eggs.</string>
    <string name="horas">Hours</string>
    <string name="minutos">Minutes</string>
    <string name="titulo_tortilla">Spanish omelette</string>
    <string name="paso_num">Step %s</string>
    <string name="descripcion_del_paso">Description of the step</string>
    <string name="num_paso_item">Step %s</string>
    <string name="aceptar">OK</string>
    <string name="cancelar">Cancel</string>
    <string name="cantidad">Quantity</string>
    <string name="nombre">Name</string>
    <string name="unidad">Unit</string>
    <string name="ingrediente">Ingredient</string>
    <string name="nombreMayus">NAME</string>
    <string name="nombre_de_la_receta">Name of the recipe</string>
    <string name="lista_de_ingredientes">List of ingredients</string>
    <string name="producto">Product</string>
    <string name="pasos_de_elaboracion">Preparation steps</string>
    <string name="nombre_del_ingrediente">Ingredient name</string>
    <string name="boton_de_eliminar">Delete button</string>
    <string name="siguiente">Next</string>
    <string name="guardar">Save</string>
    <string name="cancelar_creacion_de_receta">Cancel recipe creation</string>
    <string name="deseas_salir_del_asistente">Would you like to exit the wizard?</string>
    <string name="no">No</string>
    <string name="si">Yes</string>
    <string name="cancelar_modificacion_de_receta">Cancel prescription modification</string>
    <string name="el_nombre_de_la_receta_es_obligatorio">The name of the recipe is mandatory</string>
    <string name="valor_entre">Value between %s and %s</string>
    <string name="sin_imagen">No image</string>
    <string name="sufijo_hora">%s h</string>
    <string name="sufijo_minutos">%s min</string>
    <string name="receta_eliminada">%s deleted.</string>
    <string name="editar_receta">Edit recipe</string>
    <string name="receta_guardada">Saved recipe</string>
    <string name="esta_seguro_de_borrar_el_paso">Are you sure you want to delete the step?</string>
    <string name="este_campo_es_obligatorio">This field is mandatory</string>
    <string name="nuevo_paso">New step</string>
    <string name="esta_seguro_de_borrar_el_ingrediente">Are you sure you want to delete the ingredient?</string>
    <string name="boton_nuevo_ingrediente">Botón nuevo ingrediente</string>
    <string name="boton_nuevo_paso">Botón nuevo paso</string>
    <string name="fondo_pasos">fondo_pasos</string>
    <string name="fondo_ingredientes">fondo_ingredientes</string>
</resources>