<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/dragHandleViewIngrediente"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTituloIngrediente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ingrediente"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dragHandleViewIngrediente"
        tools:ignore="VisualLintLocaleText" />

    <EditText
        android:id="@+id/etNombreIngrediente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/nombre"
        android:inputType="textCapSentences|textPersonName"
        android:maxHeight="48dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloIngrediente"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etCantidadIngrediente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/cantidad"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="12dp"
        app:layout_constraintEnd_toStartOf="@id/etUnidadIngrediente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNombreIngrediente"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <AutoCompleteTextView
        android:id="@+id/etUnidadIngrediente"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/unidad"
        android:maxLines="1"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="@id/etCantidadIngrediente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etCantidadIngrediente"
        app:layout_constraintTop_toTopOf="@id/etCantidadIngrediente"
        tools:ignore="VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:weightSum="8"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUnidadIngrediente">

        <Button
            android:id="@+id/btnAceptarIngrediente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aceptar"
            android:textSize="16sp"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:id="@+id/btnCancelarIngrediente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/cancelar"
            android:textSize="16sp"
            tools:ignore="ButtonStyle,TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>