<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">
    <!--    android:background="@drawable/bottom_sheet_background"-->

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/opcionVerReceta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/ver_receta_icono_24"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/ver"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@color/black"
        app:drawableTint="@color/black"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/opcionModificarReceta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/editar_receta_icono_24"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/modificar"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@color/black"
        app:drawableTint="@color/black"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/opcionEliminarReceta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/eliminar_receta_icono_24"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/eliminar"
        app:drawableTint="@color/red_800"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@color/red_800"
        app:tint="@color/red_800" />

</LinearLayout>
